feat: Refactor DataInitializer and CategoryController for improved dependency injection and error handling